force-app/main/default/objects/Twitter__mdt/Twitter__mdt.object-meta.xml
<CustomObject>
    <label>Twitter</label>
    <pluralLabel>Twitter</pluralLabel>
</CustomObject>