force-app/main/default/objects/Twitter__mdt/fields/auth_url__c.field-meta.xml
<CustomField>
    <fullName>auth_url__c</fullName>
    <defaultValue>&quot;https://api.twitter.com/oauth/authorize&quot;</defaultValue>
    <label>auth url</label>
    <type>Url</type>
</CustomField>