force-app/main/default/objects/Twitter__mdt/fields/base_url__c.field-meta.xml
<CustomField>
    <fullName>base_url__c</fullName>
    <defaultValue>&quot;https://api.twitter.com&quot;</defaultValue>
    <label>base url</label>
    <type>Url</type>
</CustomField>