force-app/main/default/objects/Twitter__mdt/fields/oauth_token__c.field-meta.xml
<CustomField>
    <fullName>oauth_token__c</fullName>
    <label>oauth token</label>
    <type>TextArea</type>
</CustomField>