force-app/main/default/objects/Twitter__mdt/fields/outh_token_secret__c.field-meta.xml
<CustomField>
    <fullName>outh_token_secret__c</fullName>
    <label>outh token secret</label>
    <type>TextArea</type>
</CustomField>