force-app/main/default/objects/Twitter__mdt/fields/token_url__c.field-meta.xml
<CustomField>
    <fullName>token_url__c</fullName>
    <defaultValue>&quot;https://api.twitter.com/oauth/request_token&quot;</defaultValue>
    <label>token url</label>
    <type>Url</type>
</CustomField>